scripting/workspace_wrapper.h
@@ -254,6 +254,7 @@ void setter( rettype val );
      * @param client The Client for which the area should be retrieved
      * @returns The specified screen geometry
      */
+    Q_SCRIPTABLE QRect clientArea(ClientAreaOption option, KWin::WindowWrapper* window) const;
     Q_SCRIPTABLE QRect clientArea(ClientAreaOption option, KWin::WindowWrapper const* client) const;
     /**
      * Returns the name for the given @p desktop.
